--- a/sass/_design.sass
+++ b/sass/_design.sass
@@ -245,9 +245,10 @@
 	right: 0
 //site-in
 .site-in
-	padding: 24px 19px 17px 91px
+	padding: 0px 19px 0px 91px
+	height: 56px 
+	line-height: 56px 
 	color: #b3d60d
-	line-height: 1
 	font-size: 15px
 	text-decoration: none
 	background: #3a3a3b
